--- a/src/style/partials/blink/_elements-styling.scss
+++ b/src/style/partials/blink/_elements-styling.scss
@@ -1,32 +1,32 @@
 // Кнопка "Начать"
 .btn {
-	text-transform: uppercase;
-	font-size: 20px;
-	text-align: center;
 	background-color: transparent;
+	border: 2px solid #FFF;
+	color: #FFF;
 	cursor: pointer;
-	padding: 15px 50px;
 	display: inline-block;
+	font-size: 20px;
+	left: 50%;
 	letter-spacing: 8px;
 	outline: none;
-	transition: all 0.5s linear;
+	padding: 15px 50px;
 	position: absolute;
+	text-align: center;
+	text-transform: uppercase;
 	top: 50%;
-	left: 50%;
 	transform: translate(-50%, -50%);
-	border: 2px solid #FFFFFF;
-	color: #fff;
+	transition: all 0.5s linear;
 	&:hover {
 		color: #494949;
-		background: #FFFFFF;
+		background: #FFF;
 	}
 	&:active {
 		color: #494949;
-		background: #FFFFFF;
+		background: #FFF;
 	}
 	&:focus {
 		color: #494949;
-		background: #FFFFFF;
+		background: #FFF;
 	}
 }
 
@@ -38,24 +38,24 @@
 @media screen and (min-width: 1px) and (max-width: 1400px) {
 	.btn, .btn-end {
 		font-size: 16px;
-		padding: 15px 30px;
 		letter-spacing: 6px;
+		padding: 15px 30px;
 	}
 }
 
 // Скрытие кнопки запуска "Начать"
 .btn-hide {
-	visibility: hidden;
 	opacity: 0;
 	top: -50%;
+	visibility: hidden;
 }
 
 // Открытие кнопки "На главную"
 .btn-end-hide {
-		visibility: hidden;
 		opacity: 0;
+		visibility: hidden;
 }
 .btn-end-show {
-	visibility: visible;
 	opacity: 1;
+	visibility: visible;
 }
