--- a/src/style/partials/recommendations/_recommendations.scss
+++ b/src/style/partials/recommendations/_recommendations.scss
@@ -1,57 +1,57 @@
 .cont-background {
 	background-image: url(../img/recoms.svg);
 	background-position: center center;
-	background-size: cover;
 	background-repeat: no-repeat;
+	background-size: cover;
 }
 .recom-s {
-	padding-top: 10vh;
 	font-size: 20px;
 	line-height: 33px;
+	padding-top: 10vh;
 	p {
 		text-align: justify;
 	}
 	button {
-		letter-spacing: 8px;
-		text-transform: uppercase;
-		margin: 10vh 0;
-		position: relative;
-		left: 50%;
-		transform: translate(-50%, 0%);
-		font-size: 16px;
 		background-color: transparent;
+		border: 2px solid #FFF;
+		color: #FFF;
 		cursor: pointer;
-		padding: 15px 50px;
+		font-size: 16px;
+		left: 50%;
+		letter-spacing: 8px;
+		margin: 10vh 0;
 		outline: none;
+		padding: 15px 50px;
+		position: relative;
+		text-transform: uppercase;
+		transform: translate(-50%, 0%);
 		transition: all 0.5s linear;
-		border: 2px solid #FFFFFF;
-		color: #fff;
 			&:hover {
 				color: #494949;
-				background: #FFFFFF;
+				background: #FFF;
 			}
 			&:active {
 				color: #494949;
-				background: #FFFFFF;
+				background: #FFF;
 			}
 			&:focus {
 				color: #494949;
-				background: #FFFFFF;
+				background: #FFF;
 			}
 	}
 	h2 {
-		text-align: center;
-		padding-bottom: 5%;
-		margin: 0;
 		line-height: 60px;
+		margin: 0;
+		padding-bottom: 5%;
+		text-align: center;
 	}
 	h4 {
-		padding: 2vh 0;
 		margin: 0;
+		padding: 2vh 0;
 	}
 	ul {
-		margin-bottom: 2vh;
 		list-style-type: none;
+		margin-bottom: 2vh;
 		li {
 			border-left: 5px solid rgba(133,176,125, 1);
 			margin: 10px;
@@ -67,9 +67,9 @@
 	ul {
 		span {
 			background-color: rgba(133,176,125, 1);
-			text-align: center;
-			padding: 0 15px;
 			margin: 5px 0;
+			padding: 0 15px;
+			text-align: center;
 		}
 		a {
 			color: rgba(255, 255, 255, 0.8);
@@ -89,6 +89,6 @@
 		}
 		ul {
 			padding-left: 10px;
-	}
+		}
 	}
 }
