Change buttons style in tables page & h2 align

--- a/src/templates/tables.pug
+++ b/src/templates/tables.pug
@@ -28,8 +28,9 @@ html.no-js(lang="ru")
 				span.stretchy-nav-bg(aria-hidden="true")
 		main
 			.container
-					.row.mg-top
-						h2 Таблицы проверки зрения
+					.row
+						.mg-top
+							h2 Таблицы проверки зрения
 					.row
 						.col-sm-12.table-1
 							h4 Таблица Сивцева
