--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -5,8 +5,7 @@
 @import "partials/grid/_reboot.scss";
 @import "partials/grid/_grid.scss";
 
-// Импорт моих переменных и шрифтов
-@import "partials/_my-variables.scss";
+// Импорт шрифтов
 @import "partials/_fonts.scss";
 
 // Импорт стилей для страницы "Блинк"
