--- a/src/style/partials/blink/_containers.scss
+++ b/src/style/partials/blink/_containers.scss
@@ -1,3 +1,6 @@
+// Диаметр окружнотси для страницы "Блинк"
+$diameter: 5vh;
+
 // Контейнер для заднего фона страницы "Блинк"
 #gradient {
 	background: #836997;
