--- a/src/style/partials/blink/_start-animations.scss
+++ b/src/style/partials/blink/_start-animations.scss
@@ -123,3 +123,13 @@
 							 square-help-counterclock-wise 2s linear 53s 1 reverse forwards running;
 	}
 }
+
+// circle-top-bot									19s
+// circle-left-right								16s, 19s, 22s, 31s
+// circle-topright-botleft					16s, 19s, 22s, 31s
+// circle-topleft-botright					16s, 19s, 22s, 31s
+// circle-square-clockwise					37s, 43s, 49s, 55s
+// circle-square-counterclock-wise	37s, 43s, 49s, 55s
+// circle-orbit-clockwise					19s |
+// circle-orbit-counterclock-wise	19s |39s
+// circle-snake-right-left					30s
