Correction of errors in the text

--- a/src/templates/recommendations.pug
+++ b/src/templates/recommendations.pug
@@ -37,7 +37,7 @@ html.no-js(lang="ru")
 							ul
 								li
 									a(href="blink.html") Цикл упражнений
-									| лучше выполнять утром и вечером (перед работой и после работы)
+									|&nbsp;лучше выполнять утром и вечером (перед работой и после работы)
 								li За один раз не следует делать много повторений
 								li В случае ощущения дискомфорта нужно прекратить выполнение упражнений
 							h4 Упражнения для глаз
@@ -63,7 +63,7 @@ html.no-js(lang="ru")
 								br
 								br
 								| После выполнения комплекса упражнений следует сделать
-								a(href="http://seeactive.by/methods/beits-palming.html" target="_blank") «Пальминг»:
+								a(href="http://seeactive.by/methods/beits-palming.html" target="_blank") &nbsp;«Пальминг»:
 								br
 								| Закрыть глаза и на несколько минут плотно прикрыть их ладонями. В результате глаза расслабятся.
 							button(onclick="location.href='blink.html'") Перейти к упражнениям
