--- a/src/index.pug
+++ b/src/index.pug
@@ -67,7 +67,7 @@ html.no-js(lang="ru")
 							img(src="img/icons/heart.svg" alt="heart-icon")
 					.col-md-4
 						p
-							a(href="http://black-sky.github.io/" target="_blank") &copy;Alexander Kislov
+							a(href="https://alexander-kislov.github.io") &copy; 2017 Alexander Kislov
 					.col-md-4
 						p
 							a(href="http://www.freepik.com/free-vector/blue-polygons-background_841049.htm" target="_blank") Background&nbsp;/&nbsp;
