--- a/src/templates/recommendations.pug
+++ b/src/templates/recommendations.pug
@@ -42,21 +42,21 @@ html.no-js(lang="ru")
 								li В случае ощущения дискомфорта нужно прекратить выполнение упражнений
 							h4 Упражнения для глаз
 							ul
-								li Вверх и вниз
-								li Влево и вправо
-								li Бабочка
-								li По диагонали с правового верхнего угла в левый нижний
-								li По диагонали с левого верхнего угла в правый нижний
-								li Бабочка
-								li По квадрату против часовой стрелки
-								li Бабочка
-								li По квадрату по часовой стрелке
-								li Бабочка
-								li По кругу против часовой стрелки
-								li По кругу по часовой стрелке
-								li Бабочка
-								li Змейка
-								li Пальминг
+								li Вверх и вниз - двигайте глазами снизу вверх и сверху вниз
+								li Влево и вправо - двигайте глазами слева направо и наоборот
+								li Бабочка - легко мигайте газами
+								li Движение по диагонали с правого верхнего угла в левый нижний
+								li Движение по диагонали с левого верхнего угла в правый нижний
+								li Бабочка - легко мигайте газами
+								li Движение по квадрату против часовой стрелки
+								li Бабочка - легко мигайте газами
+								li Движение по квадрату по часовой стрелке
+								li Бабочка - легко мигайте газами
+								li Вращение по кругу против часовой стрелки
+								li Вращение по кругу по часовой стрелке
+								li Бабочка - легко мигайте газами
+								li Змейка - движение по линейным траекториям
+								li Пальминг - закрыть глаза и на несколько минут плотно прикрыть их ладонями
 							p После выполнения движений следует делать упражнение «Бабочка»:
 								br
 								| Это упражнение на расслабление мышц глаза. По сути это обычное моргание. Моргать нужно не только часто, но и очень мягко, легко, не напрягаясь, как, будто крылья бабочки.
