--- a/src/templates/blink.pug
+++ b/src/templates/blink.pug
@@ -31,6 +31,9 @@ html.no-js(lang="ru")
 			.row
 				.timer-cont
 					span#timer
+				.tooltip#tp-hide
+					p Следите глазами за шариком, задерживая взгляд в его крайних положениях на одну секунду. В момент когда он мигает нужно делать упражнение «Бабочка» (легко мигать глазами вместе с ним). Более подробное описание&nbsp;
+						a(href = "recommendations.html") здесь.
 				.col-sm-12.main-cont#gradient
 					button.btn#startanim Начать
 					button.btn-end.btn-end-hide#tomain(onclick="location.href='../index.html'") На главную
