--- a/src/index.pug
+++ b/src/index.pug
@@ -61,10 +61,10 @@ html.no-js(lang="ru")
 							img(src="img/icons/github.svg" alt="github-icon")
 						a(href="https://plus.google.com/u/0/+alexandrkislov92" target="_blank")
 							img(src="img/icons/google-plus.svg" alt="google-plus-icon")
-						a(href="skype:strannik11.92?call" target="_blank")
+						a(href="skype:live:alexander-kislov?call" target="_blank")
 							img(src="img/icons/skype.svg" alt="skype-icon")
-						a#myBtn(href="#")
-							img(src="img/icons/heart.svg" alt="heart-icon")
+						//- a#myBtn(href="#")
+						//- 	img(src="img/icons/heart.svg" alt="heart-icon")
 					.col-md-4
 						p
 							a(href="https://alexander-kislov.github.io") &copy; 2017 Alexander Kislov
